src/components/Footer/Footer.module.scss
.Updates {
  bottom: 0;
  width: 100vw;
  position: fixed;
  justify-content: space-between;
}

.UpdateBox {
  position: fixed;
  bottom: var(--sixteen-pixel);
  left: var(--ninety-six-pixel);

  z-index: 1;
}

.FactionBox {
  display: none;
}

.MobileMenuButton,
.MobileMenu {
  display: none;
}

@media only screen and (max-width: 1279px) {
  .UpdateBox {
    left: 64px;
  }
}

@media only screen and (max-width: 900px) {
  .UpdateBox {
    left: var(--sixteen-pixel);
  }

  .FactionBox {
    position: fixed;
    display: flex;
    z-index: 1;

    right: var(--sixteen-pixel);
    bottom: var(--sixteen-pixel);
  }
}

@media only screen and (max-width: 600px) {
  .UpdateBox {
    display: none;
  }

  .FactionBox {
    display: none;
  }

  .MobileMenuButton {
    position: fixed;
    left: 16px;
    bottom: 16px;

    width: 48px;
    aspect-ratio: 1;
    padding: 0;

    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 4px;
    border-radius: 100%;

    z-index: 1;
  }

  .MenuBar {
    height: 4px;
    width: 24px;
    background-color: #eee;

    border-radius: 4px;
  }

  .MobileMenu {
    position: fixed;
    left: 12px;
    bottom: 16px;

    padding: 8px;

    display: flex;
    opacity: 0;
    flex-direction: column;
    align-items: flex-start;
    justify-content: center;
    gap: 8px;

    z-index: 0;
    backdrop-filter: blur(8px);
    border-radius: 8px;
    border: 2px solid #222;

    transition: bottom 400ms, opacity 400ms;
  }

  .MobileMenu.shown {
    opacity: 1;
    bottom: 70px;

    transition: bottom 400ms, opacity 100ms;
  }

  .MobileMenu button {
    position: relative;

    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    gap: 0;

    width: 30px;
    aspect-ratio: 1;
    border-radius: 100%;
    border: none;
    padding: 3px;
  }
}

